# llm-mac-fine-tune-tphan

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: server.py
configs/: data.yaml  inference.yaml  model.yaml  training.yaml
data/: datasets.py
data/processed/: valid.jsonl
finetuning/: lora.py  qlora.py
inference/: generate.py
llama-3.2-1b-adapters/: adapter_config.json
models/base/: registry.py
models/hf_models/: hf_loader.py
models/mlx_models/: mlx_loader.py
scripts/: prepare_data.py
tests/: test_data.py
training/: train.py
utils/: logger.py
